fixed jumpy buttons

--- a/react-practice/username-generator/joke-generator/src/components/component.css
+++ b/react-practice/username-generator/joke-generator/src/components/component.css
@@ -1,6 +1,6 @@
 .fix{
     display: flex;
-    justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
 
@@ -18,6 +18,6 @@
 .btn{
 font-size: 24px !important;
 width: 200px;
-
+display: grid;
 }
 
